--- a/src/main/resources/assets/reality_anchor/lang/zh_cn.json
+++ b/src/main/resources/assets/reality_anchor/lang/zh_cn.json
@@ -2,5 +2,7 @@
     "block.reality_anchor.standard_anchor": "斯克兰顿现实稳定锚",
     "block.reality_anchor.personal_anchor": "个人版斯克兰顿现实稳定锚",
     "block.reality_anchor.passive_anchor": "被动版斯克兰顿现实稳定锚",
-    "block.reality_anchor.admin_anchor": "4 级许可斯克兰顿现实稳定锚"
+    "block.reality_anchor.admin_anchor": "4 级许可斯克兰顿现实稳定锚",
+
+    "gui.reality_anchor.title": "斯克兰顿现实稳定锚操作终端"
 }
